devsecops/cloud/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tech-challenge-testing
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
    linkerd.io/inject: enabled
  labels:
    app: tech-challenge-testing
