devsecops/cloud/kubernetes/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-challenge
  namespace: tech-challenge-lucas
  labels:
    app: tech-challenge
spec:
  selector:
    matchLabels:
      app: tech-challenge
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tech-challenge
    spec:
      containers:
        - name: tech-challenge
          image: ghcr.io/soat1stackgolang/tech-challenge:main-develop
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10000
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 25Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 8000
              name: web
          
      restartPolicy: Always
