devsecops/cloud/kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge
  namespace: tech-challenge-testing
spec:
  selector:
    app: tech-challenge
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
